--- a/src/clsSystems.cls
+++ b/src/clsSystems.cls
@@ -7,16 +7,39 @@ Attribute VB_GlobalNameSpace = False
 Attribute VB_Creatable = False
 Attribute VB_PredeclaredId = False
 Attribute VB_Exposed = False
-'@Folder("Tests")
+'@Folder("VBAProject")
 
 Private pContent As New Collection
 
-Sub Load(table As ListObject)
+Sub LoadTable(table As ListObject)
     Dim System As clsSystem
-    Set System = New clsSystem
-    'read an entry
-    System.SystemID = 50
-    'add it to collection
-    pContent.Add System
+    Dim row As ListRow  'for use in for Each
+
+
+    For Each row In table.ListRows
+        'read an entry
+        Set System = New clsSystem
+        'Debug.Print row.index, row.Range(1, 1)
+        With System
+            .SystemID = row.Range(1, 1)
+            .Description = row.Range(1, 2)
+            .SystemNumber = row.Range(1, 3) 'as string
+            If row.Range(1, 5) = "N" Then
+                .isUtility = False
+            Else
+                .isUtility = True
+            End If
+        End With
+        'add it to collection
+        Me.Add System
+        
+    Next
 End Sub
 
+Sub Add(newSystem As clsSystem)
+    pContent.Add newSystem
+End Sub
+
+Function Item(index As LongPtr) As clsSystem
+    Set Item = pContent.Item(index)
+End Function
