Loading tags, disciplines, Systems into memory

--- a/src/clsDisciplines.cls
+++ b/src/clsDisciplines.cls
@@ -34,3 +34,7 @@ Function Item(index As LongPtr) As clsDiscipline
     Set Item = pContent.Item(index)
 End Function
 
+Function Count() As LongPtr
+    Count = pContent.Count
+End Function
+
