--- a/src/clsSystems.cls
+++ b/src/clsSystems.cls
@@ -44,3 +44,8 @@ Function Item(index As LongPtr) As clsSystem
     Set Item = pContent.Item(index)
 End Function
 
+Function Count() As LongPtr
+    Count = pContent.Count
+End Function
+
+
