update to use process or utility system in default assignment

--- a/src/clsMAHlist.cls
+++ b/src/clsMAHlist.cls
@@ -12,7 +12,24 @@ Option Explicit
 
 Private pContent As New Collection
 
-Sub LoadTableProcess(table As ListObject)
+Public Sub Add(MAH As clsMAHDefault)
+    pContent.Add MAH, MAH.ID
+End Sub
+
+Public Function Item(index As LongPtr) As clsMAHDefault
+    Set Item = pContent.Item(index)
+End Function
+Public Function FindByID(ID As String) As clsMAHDefault
+    Set FindByID = pContent.Item(ID)
+End Function
+
+
+
+Public Function Count() As LongPtr
+    Count = pContent.Count
+End Function
+
+Public Sub LoadTableProcess(table As ListObject)
     Dim MAHDefault As clsMAHDefault
     Dim row As ListRow  'for use in for Each
 
@@ -21,7 +38,31 @@ Sub LoadTableProcess(table As ListObject)
         Set MAHDefault = New clsMAHDefault
         'Debug.Print row.index, row.Range(1, 1)
         With MAHDefault
-            .ID = row.Range(1, 1)
+            .ID = row.Range(1, 1).Text
+            .Family = row.Range(1, 4).Text          'to come with #N/A entries
+            .Component = row.Range(1, 5).Text
+            .TypCriticality = row.Range(1, 6).Text
+            .Comment = row.Range(1, 7).Text
+        End With
+        'add it to collection
+        Me.Add MAHDefault
+    Next
+End Sub
+
+Public Sub LoadTableUtility(table As ListObject)
+    Dim MAHDefault As clsMAHDefault
+    Dim row As ListRow  'for use in for Each
+
+    For Each row In table.ListRows
+        'read an entry
+        Set MAHDefault = New clsMAHDefault
+        'Debug.Print row.index, row.Range(1, 1)
+        With MAHDefault
+            .ID = row.Range(1, 1).Text
+            .Family = row.Range(1, 9).Text          'to come with #N/A entries
+            .Component = row.Range(1, 10).Text
+            .TypCriticality = row.Range(1, 11).Text
+            .Comment = row.Range(1, 12).Text
         End With
         'add it to collection
         Me.Add MAHDefault
