fix template sheet generation, but needs formula update in spreadsheet as ISNA function changed on ABC calc

--- a/src/clsFailureCodes.cls
+++ b/src/clsFailureCodes.cls
@@ -67,8 +67,8 @@ Public Sub SetupForSystemGroup(MAHlist As clsMAHlist)
         Set MAH = MAHlist.FindByID(fcode.ID)
         
         'update cells in ws based on MAHList entries
-        ws.Range("H17").Formula = MAH.Family
-        ws.Range("I17").Formula = MAH.Component
+        ws.Range("H17").Formula = MAH.FamilyID & " | " & MAH.Family & " | " & MAH.Component
+        
         ws.Range("I19").Formula = MAH.Comment
         
     Next fcode
